@@ -1,3 +1,7 @@
+2009-04-23  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Fixed *inc data processing.
+
 2009-04-22  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/SNMPServer.pm: Fixed SNMP alerts.
